fixed project name in composer.json and project namespace to fit it with other nand2tetris software

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "HACK assembler",
+  "name": "tahuop/hack-assembler",
   "authors": [
     {
       "name": "Malkhasian Vazghen",
@@ -12,7 +12,7 @@
   },
   "autoload": {
     "psr-4": {
-      "TaHUoP\\": "src/"
+      "TaHUoP\\HackAsm\\": "src/"
     }
   },
   "config": {
